force-app/main/default/objects/afl_Knowledge_feedback__c/afl_Knowledge_feedback__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Knowledge Feedback Tracking</description>
    <label>Knowledge feedback</label>
</CustomObject>