force-app/main/default/objects/afl_Knowledge_feedback__c/fields/Chatter_triggers_enabled__c.field-meta.xml
<CustomField>
    <fullName>Chatter_triggers_enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked by default. Disabling it avoids the creation of Article Feedback records using the designated hashtags on Chatter posts</description>
    <inlineHelpText>Checked by default. Disabling it avoids the creation of Article Feedback records using the designated hashtags on Chatter posts. Only disable it if you need to run processes that involve the FeedItem and FeedComment objects.</inlineHelpText>
    <label>Chatter triggers enabled</label>
    <type>Checkbox</type>
</CustomField>