force-app/main/default/objects/afl_Knowledge_feedback__c/fields/defaultPicklistValuesInserted__c.field-meta.xml
<CustomField>
    <fullName>defaultPicklistValuesInserted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>defaultPicklistValuesInserted</label>
    <type>Checkbox</type>
</CustomField>