force-app/main/default/objects/afl_Knowledge_feedback__c/fields/Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Hashtag__c</fullName>
    <defaultValue>&quot;#ArticleFeedback&quot;</defaultValue>
    <description>Hashtag is used to create an Article Feedback object when it is present in a Chatter feed for an Article.</description>
    <inlineHelpText>Type prefixed with the hash character (#).</inlineHelpText>
    <label>Hashtag</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>